unpackaged/main/default/objects/CMPL123CME__TGA__c/CMPL123CME__TGA__c.object-meta.xml
<CustomObject>
    <description>TGA</description>
    <label>TGA</label>
    <nameField>
        <displayFormat>TGA-{0000}</displayFormat>
        <label>TGA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TGA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>