unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Additional_Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Additional_Comments__c</fullName>
        <description>Additional Comments</description>
        <inlineHelpText>Additional Comments</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>