unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Age_yrs_mnths__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_yrs_mnths__c</fullName>
        <description>Age (yrs, mnths)</description>
        <inlineHelpText>Age (yrs, mnths)</inlineHelpText>
        <label>Age (yrs, mnths)</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>