unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__ARTG_Mfr__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ARTG_Mfr__c</fullName>
        <description>ARTG Mfr. #</description>
        <inlineHelpText>ARTG Mfr. #</inlineHelpText>
        <label>ARTG Mfr. #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>