unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Authorised_Representative_Company__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Company__c</fullName>
        <description>Authorised Representative Company</description>
        <inlineHelpText>Authorised Representative Company</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>