unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Authorised_Representative_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Email__c</fullName>
        <description>Authorised Representative Email</description>
        <inlineHelpText>Authorised Representative Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </CustomField>