unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Authorised_Representative_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Fax__c</fullName>
        <description>Authorised Representative Fax</description>
        <inlineHelpText>Authorised Representative Fax</inlineHelpText>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>