unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Authorised_Representative_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Name__c</fullName>
        <description>Name</description>
        <inlineHelpText>Authorised Representative Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>