unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Authorised_Representative_Tel__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Tel__c</fullName>
        <description>Authorised Representative Tel</description>
        <inlineHelpText>Authorised Representative Tel</inlineHelpText>
        <label>Tel.</label>
        <type>Phone</type>
    </CustomField>