unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Catalogue__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Catalogue__c</fullName>
        <description>Catalogue #</description>
        <inlineHelpText>Catalogue #</inlineHelpText>
        <label>Catalogue #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>