unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Contact_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Name__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>