unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Contact_name_at_site_of_event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_name_at_site_of_event__c</fullName>
        <description>Contact name at site of event</description>
        <inlineHelpText>Contact name at site of event</inlineHelpText>
        <label>Contact name at site of event</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>