unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Corrective_action_taken__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Corrective_action_taken__c</fullName>
        <description>Corrective action taken relevant to the care of the patient:</description>
        <inlineHelpText>Corrective action taken relevant to the care of the patient:</inlineHelpText>
        <label>Corrective action taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>