unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Countries_where_these_similar_AE_Occured__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Countries_where_these_similar_AE_Occured__c</fullName>
        <description>Countries where these similar adverse events occurred:</description>
        <inlineHelpText>Countries where these similar adverse events occurred</inlineHelpText>
        <label>Countries where these similar AE occured</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>