unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Date_mfr_aware__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_mfr_aware__c</fullName>
        <description>Date mfr aware</description>
        <inlineHelpText>Date mfr aware</inlineHelpText>
        <label>Date mfr aware</label>
        <type>Date</type>
    </CustomField>