unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Date_of_adverse_event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_adverse_event__c</fullName>
        <description>Date of adverse event</description>
        <inlineHelpText>Date of adverse event</inlineHelpText>
        <label>Date of adverse event</label>
        <type>Date</type>
    </CustomField>