unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Date_of_next_report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_next_report__c</fullName>
        <description>Date of next report(max 30 days from A)</description>
        <inlineHelpText>Date of next report(max 30 days from A)</inlineHelpText>
        <label>Date of next report(max 30 days from A)</label>
        <type>Date</type>
    </CustomField>