unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Date_of_this_report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_this_report__c</fullName>
        <description>Date of this report</description>
        <inlineHelpText>Date of this report</inlineHelpText>
        <label>Date of this report</label>
        <type>Date</type>
    </CustomField>