unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Description_of_event_or_problem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description_of_event_or_problem__c</fullName>
        <description>Description of event or problem</description>
        <inlineHelpText>Description of event or problem</inlineHelpText>
        <label>Description of event or problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>