unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Device_ARTG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_ARTG__c</fullName>
        <description>Device ARTG #</description>
        <inlineHelpText>Device ARTG #</inlineHelpText>
        <label>Device ARTG #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>