unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Device_Disposition_Current_Location__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Disposition_Current_Location__c</fullName>
        <description>Device Disposition/Current Location</description>
        <inlineHelpText>Device Disposition/Current Location</inlineHelpText>
        <label>Device Disposition/Current Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>