unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Device_Information_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Information_Email__c</fullName>
        <description>E-mail</description>
        <inlineHelpText>E-mail</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </CustomField>