unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Device_Information_Tel__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Information_Tel__c</fullName>
        <description>Tel.</description>
        <inlineHelpText>Tel.</inlineHelpText>
        <label>Tel.</label>
        <type>Phone</type>
    </CustomField>