unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__GMDN_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__GMDN_Code__c</fullName>
        <description>GMDN Code</description>
        <inlineHelpText>GMDN Code</inlineHelpText>
        <label>GMDN Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>