unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__GMDN_Code_Text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__GMDN_Code_Text__c</fullName>
        <label>GMDN Code Text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>