unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Healthcare_Facility_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Facility_Address__c</fullName>
        <description>Healthcare Facility Address</description>
        <inlineHelpText>Healthcare Facility Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </CustomField>