unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Healthcare_Facility_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Facility_Email__c</fullName>
        <description>Healthcare_Facility_Email</description>
        <inlineHelpText>Healthcare Facility Email</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </CustomField>