unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Healthcare_Facility_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Facility_Fax__c</fullName>
        <description>Healthcare Facility Fax</description>
        <inlineHelpText>Healthcare Facility Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </CustomField>