unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Healthcare_Facility_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Facility_Name__c</fullName>
        <description>Healthcare_Facility_Name</description>
        <inlineHelpText>Healthcare Facility Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>