unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Healthcare_Facility_Tel__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Facility_Tel__c</fullName>
        <description>Healthcare Facility Tel</description>
        <inlineHelpText>Healthcare Facility Tel</inlineHelpText>
        <label>Tel</label>
        <type>Phone</type>
    </CustomField>