unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Implant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <description>Implant Date</description>
        <inlineHelpText>Implant Date</inlineHelpText>
        <label>Implant Date</label>
        <type>Date</type>
    </CustomField>