unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__List_of_other_devices_involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__List_of_other_devices_involved__c</fullName>
        <description>List of other devices involved</description>
        <inlineHelpText>List of other devices involved</inlineHelpText>
        <label>List of other devices involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>