unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Manufacturers_Device_Analysis_Results__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturers_Device_Analysis_Results__c</fullName>
        <description>Manufacturers Device Analysis Results</description>
        <inlineHelpText>Manufacturers Device Analysis Results</inlineHelpText>
        <label>Manufacturers Device Analysis Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>