unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Mfr_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfr_Name__c</fullName>
        <description>Mfr. Name</description>
        <inlineHelpText>Mfr. Name</inlineHelpText>
        <label>Mfr. Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>