unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Mfr_report_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfr_report_Number__c</fullName>
        <description>Mfr report #</description>
        <inlineHelpText>Mfr report #</inlineHelpText>
        <label>Mfr report #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>