unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Mfr_Sponsor_aware_of_other_similar_event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfr_Sponsor_aware_of_other_similar_event__c</fullName>
        <description>Mfr/Sponsor aware of other similar events? ( number or rate)</description>
        <inlineHelpText>Mfr/Sponsor aware of other similar events? ( number or rate)</inlineHelpText>
        <label>Mfr/Sponsor aware of other similar event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>