unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Model__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Model__c</fullName>
        <description>Model #</description>
        <inlineHelpText>Model #</inlineHelpText>
        <label>Model #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>