unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Operator_of_Device_at_Time_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Operator_of_Device_at_Time_of_Event__c</fullName>
        <description>Operator of Device at Time of Event</description>
        <inlineHelpText>Operator of Device at Time of Event</inlineHelpText>
        <label>Operator of Device at Time of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HC Profnal</fullName>
                </value>
                <value>
                    <fullName>Other Caregiver</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>