unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Other_Regulatory_Authorities_Reported__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Regulatory_Authorities_Reported__c</fullName>
        <description>Identity of all other Regulatory Authorities, Notified Bodies, etc., 
where this report was also sent.</description>
        <inlineHelpText>Identity of all other Regulatory Authorities, Notified Bodies, etc., where this report was also sent.</inlineHelpText>
        <label>Other Regulatory Authorities Reported</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>