unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Patient_history_co_morbidities__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_history_co_morbidities__c</fullName>
        <description>Patient history (co-morbidities and medication):</description>
        <inlineHelpText>Patient history (co-morbidities and medication):</inlineHelpText>
        <label>Patient history (co-morbidities/medica.)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>