unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Patient_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Weight__c</fullName>
        <description>Weight</description>
        <inlineHelpText>Weight</inlineHelpText>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>