unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Remedial_Action_Corrective_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Remedial_Action_Corrective_Action__c</fullName>
        <description>Remedial Action/Corrective Action/Preventive Action</description>
        <inlineHelpText>Remedial Action/Corrective Action/Preventive Action</inlineHelpText>
        <label>RA/CA/PA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>