unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Report_Category__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_Category__c</fullName>
        <description>Report Category</description>
        <inlineHelpText>Report Category</inlineHelpText>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S Pblc Hlth Threat</fullName>
                </value>
                <value>
                    <fullName>Death/Serious Injury</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>