unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Report_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_Type__c</fullName>
        <description>Report Type</description>
        <inlineHelpText>Report Type</inlineHelpText>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Trend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>