unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Ser_or_Lot__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Ser_or_Lot__c</fullName>
        <description>Ser. or Lot #’s</description>
        <inlineHelpText>Ser. or Lot #’s</inlineHelpText>
        <label>Ser. or Lot #’s</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>