unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Specific_Device_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Specific_Device_Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </CustomField>