unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__TGA_DIR_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__TGA_DIR_Number__c</fullName>
        <description>TGA DIR #</description>
        <inlineHelpText>TGA DIR #</inlineHelpText>
        <label>TGA DIR #</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>