unpackaged/main/default/objects/CMPL123CME__TGA__c/fields/CMPL123CME__Usage_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Usage_of_Device__c</fullName>
        <description>Usage of Device</description>
        <inlineHelpText>Usage of Device</inlineHelpText>
        <label>Usage of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Use</fullName>
                </value>
                <value>
                    <fullName>Reuse of Single Use</fullName>
                </value>
                <value>
                    <fullName>Reuse of Reusable</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/Refurbished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>